@@ -1,5 +1,6 @@
   Auto Tab (0.8) TBD
     * Handle files with mixed tabs and spaces better, patch by Pierre Ossman
+    * Make plugin work on Mac OS X, by falling back to statusbar.remove()
 
   Auto Tab (0.7) 2010-07-05
     * Fix deprecated method calls (issue #8)
